# synthesis-skills

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  skill_submission.yml
.github/workflows/: validate.yml
catalog/: skills.json
docs/: repo-layout.md  seeding.md  submitting-skills.md
scripts/: __init__.py  build_catalog.py  catalog_tools.py  run_stss_gate.py  validate_repo.py
skills/csv-parsing-basics/: SKILL.md
skills/csv-parsing-basics/scripts/: inspect_csv.py
skills/deep-research-synthesizer/: PROVENANCE.json  REGISTRY.json  SKILL.md
skills/dispatching-parallel-agents/: PROVENANCE.json  REGISTRY.json  SKILL.md
skills/receiving-code-review/: PROVENANCE.json  REGISTRY.json
skills/repo-surveyor/: PROVENANCE.json  REGISTRY.json  SKILL.md
skills/requesting-code-review/: PROVENANCE.json  REGISTRY.json  SKILL.md
skills/systematic-debugging/: PROVENANCE.json  REGISTRY.json  SKILL.md
skills/test-driven-development/: PROVENANCE.json  REGISTRY.json
skills/using-git-worktrees/: PROVENANCE.json  REGISTRY.json  SKILL.md
skills/verification-before-completion/: PROVENANCE.json  REGISTRY.json  SKILL.md
skills/writing-clearly-and-concisely/: PROVENANCE.json  REGISTRY.json  SKILL.md
skills/writing-plans/: PROVENANCE.json  REGISTRY.json  SKILL.md
skills/writing-skills/: PROVENANCE.json  REGISTRY.json  SKILL.md
tests/: test_catalog.py  test_stss_gate.py  test_validation.py
(+7 files in other folders)
