[project]
name = "synthesis-skills-registry"
version = "0.1.0"
description = "Canonical curated skill repository and automation for Synthesis."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Anthony Maio" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
